Fix toolbar spacing

--- a/packages/compass-aggregations/src/components/pipeline-builder-toolbar/pipeline-builder-toolbar.less
+++ b/packages/compass-aggregations/src/components/pipeline-builder-toolbar/pipeline-builder-toolbar.less
@@ -4,7 +4,6 @@
   align-items: center;
   display: flex;
   flex-shrink: 0;
-  justify-content: space-between;
   height: 34px;
   padding: 0px 10px 0px 15px;
   width: 400px;
@@ -28,6 +27,11 @@
         font-size: 12px;
       }
     }
+  }
+
+  &-add-wrapper {
+    flex-grow: 4;
+    margin: 0px 3px 0px 3px;
   }
 
   &-name {
